# a38

./: LICENSE  a38_app.ttl  a38_ontology.ttl  a38_ui_ontology.ttl  create_ontology.py  pyproject.toml  requirements.txt  store.py  tui.py
